WebCore/ksvg2/svg/SVGElement.h
@@ -61,7 +61,7 @@ public: \
     virtual void setBaseVal(BareType newBaseVal); \
     virtual BareType animVal() const; \
     virtual void setAnimVal(BareType newAnimVal); \
-\
+    \
 protected: \
     ClassStorageType m_element; \
 }; \
@@ -162,14 +162,14 @@ PassRefPtr<ClassName::SVGAnimatedTemplate##UpperProperty> ClassName::LowerProper
 { \
     const SVGElement* context = contextElement(); \
     ASSERT(context); \
-    return new ClassName::SVGAnimatedTemplate##UpperProperty(context); \
+    return lookupOrCreateWrapper<ClassName::SVGAnimatedTemplate##UpperProperty, SVGElement>(context, AttrName); \
 }
 
 #define ANIMATED_PROPERTY_DEFINITIONS(ClassName, BareType, UpperClassName, LowerClassName, UpperProperty, LowerProperty, AttrName, StorageGetter) \
 ANIMATED_PROPERTY_DEFINITIONS_INTERNAL(ClassName, ClassName, BareType, UpperClassName, LowerClassName, UpperProperty, LowerProperty, AttrName, StorageGetter, this) \
 PassRefPtr<ClassName::SVGAnimatedTemplate##UpperProperty> ClassName::LowerProperty##Animated() const \
 { \
-    return new ClassName::SVGAnimatedTemplate##UpperProperty(this); \
+    return lookupOrCreateWrapper<ClassName::SVGAnimatedTemplate##UpperProperty, ClassName>(this, AttrName); \
 }
 
 namespace WebCore {
